Fix: Environment table help icon spacing.

--- a/less/essential/admin.less
+++ b/less/essential/admin.less
@@ -15,4 +15,9 @@
     width:100%;
 }
 
+.environmenttable img.iconhelp {
+    padding-right: 2px;
+    margin-right: .3em;
+}
+
 /* @end */
